# tokenization

./: .gitignore  Preparando_textos_para_ML_and_IA.ipynb  README.md  pyproject.toml
