[tool.poetry]
name = "tokenization"
version = "0.1.0"
description = ""
authors = ["Christian Batista <me@christianbatista.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
scikit-learn = "^1.5.2"
nltk = "^3.9.1"
svgling = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
